sonarr/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        imagePullPolicy: Always
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sonarr
          mountPath: /config
          subPath: docker/sonarr
        - name: sonarr
          mountPath: /downloads
          subPath: downloads/Series
        - name: sonarr
          mountPath: /tv
          subPath: Series
      volumes:
      - name: sonarr
        glusterfs:
          endpoints: glusterfs-cluster
          path: data
          readOnly: false
